Add debugging step in Hugo workflow

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,15 +48,21 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-      - name: Build with Hugo
+      - name: Show files for debugging
+        run: |
+          echo "Repo root contents:"
+          ls -la
+          echo "rune-wiki contents:"
+          ls -la rune-wiki
+          echo "rune-wiki/content contents:"
+          ls -la rune-wiki/content
+      - name: Build with Hugo (debug)
         working-directory: ./rune-wiki
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
         run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          hugo --minify --verbose
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
