--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,7 +31,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.128.0
+      HUGO_VERSION: 0.148.0
     steps:
       - name: Install Hugo CLI
         run: |
@@ -48,21 +48,13 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-      - name: Show files for debugging
-        run: |
-          echo "Repo root contents:"
-          ls -la
-          echo "rune-wiki contents:"
-          ls -la rune-wiki
-          echo "rune-wiki/content contents:"
-          ls -la rune-wiki/content
       - name: Build with Hugo (debug)
         working-directory: ./rune-wiki
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
         run: |
-          hugo --minify --verbose
+          hugo --minify --logLevel info
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
